[tool.poetry]
name = "my-python-template"
version = "0.1.0"
description = "templater zzz"
authors = ["easy-quest <esim.i2p@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_python_template"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
